# WebBoxVM

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE.md  README.md  models.md  test_wasm64.mjs  todo.md  vision.md  wasm64-wasip1.json
emulator/: Cargo.toml
emulator/examples/: bench_decode.rs  boot_test.rs  decode_kernel.rs  long_boot.rs  spin_dump.rs  vbar_test.rs  wait_uart.rs  wasm_test.rs
emulator/src/: boot.rs  bus.rs  constants.rs  dtb.rs  initrd.rs  lib.rs  loader.rs  memory.rs  wasi64.rs  wasm_main.rs
emulator/src/arm64/: bitmask_imm.rs  decode.rs  decode_cache.rs  execute.rs  helpers.rs  instr.rs  interpreter.rs  machine.rs  mmu.rs  mod.rs  opcodes.rs  pstate.rs  registers.rs  system_regs.rs
emulator/src/arm64/decode/: branch.rs  data_proc.rs  disarm64_shim.rs  ldst.rs  mod.rs  system.rs  tests.rs
emulator/src/arm64/execute/: alu.rs  branch.rs  debug.rs  load_store.rs  mod.rs  system.rs  tests.rs
emulator/src/arm64/interpreter/: mod.rs  tests.rs
emulator/src/arm64/jit/: block.rs  code_cache.rs  emitter_a64.rs  emitter_x64.rs  mod.rs
emulator/src/arm64/mmu/: tests.rs
emulator/src/boot/: efi_traps.rs  mod.rs  page_tables.rs
emulator/src/constants/: boot.rs  efi.rs  layout.rs  mmu.rs  mod.rs  sysreg.rs
emulator/src/devices/: gicv3.rs  mod.rs  pl011.rs
emulator/src/devices/pl011/: mod.rs  registers.rs
emulator/src/dtb/: tests.rs
emulator/src/efi/: encode.rs  layout.rs  mod.rs  protocols.rs  tables.rs
emulator/src/efi/tables/: mod.rs  trampolines.rs
emulator/src/initrd/: tests.rs
emulator/src/loader/: kernel.rs  mod.rs  relocations.rs
(+11 files in other folders)
