[package]
name = "emulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebBoxVM core emulator — ARM64/x86_64 CPU, MMU, and devices"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[dev-dependencies]
