[package]
name = "emulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebBoxVM core emulator — ARM64/x86_64 CPU, MMU, and devices"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-bindgen = { git = "https://github.com/wasm-bindgen/wasm-bindgen", optional = true }
js-sys = { git = "https://github.com/wasm-bindgen/wasm-bindgen", optional = true }
web-sys = { git = "https://github.com/wasm-bindgen/wasm-bindgen", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[dev-dependencies]
